Pull request 2058: ADG-7652 fix table titles scroll issue
Merge in DNS/adguard-home from ADG-7652 to master

Updates #6337.

Squashed commit of the following:

commit 3b10beacb3d2f44152c73412ec6e2ae1e77dafc3
Merge: 241c5ea18 f3817e441
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Fri Nov 3 16:29:48 2023 +0300

    Merge branch 'master' into ADG-7652

commit 241c5ea18ab7ae0b4d945768a9dc5fc60309d0d6
Author: Ildar Kamalov <ik@adguard.com>
Date:   Thu Nov 2 10:12:23 2023 +0300

    changelog

commit 18afa19abf3a4fa08549b802e97e554199143ee7
Author: Ildar Kamalov <ik@adguard.com>
Date:   Wed Nov 1 11:31:11 2023 +0300

    ADG-7652 fix table titles scroll issue

--- a/client/src/components/ui/ReactTable.css
+++ b/client/src/components/ui/ReactTable.css
@@ -9,10 +9,6 @@
     overflow: visible;
 }
 
-.ReactTable .rt-tbody {
-    overflow: visible;
-}
-
 .ReactTable .rt-noData {
     color: var(--rt-nodata-color);
     background-color: var(--rt-nodata-bgcolor);
